fix spacing in projects section

--- a/main.css
+++ b/main.css
@@ -102,7 +102,7 @@ h2 {
   color: var(--background-1);
   background-color: var(--primary-1);
   width: 100.4vw;
-  margin: 1vw -1vw 0vw -1vw;
+  margin: 1vw -1vw 3vw -1vw;
   font-size: 2.25vw;
 }
 
